# binarily

./: .clang-tidy  .travis.yml  Binarily Size Data Update-fbe2263a6cf6.json.enc  CMakeLists.txt  LICENSE.md  PRIVACY.md  README.md  binarily.js  binarily.wasm  build  deploy_key.enc  index.html  script.js
bench/: CMakeLists.txt  binary_file_reader_bench.cpp  binary_reader_bench.cpp
src/: CMakeLists.txt  binary_buffer_reader.cpp  binary_buffer_reader.h  binary_file_reader.cpp  binary_file_reader.h  binary_reader.cpp  binary_reader.h  binary_type.h  elf32.h  elf32_file_header.cpp  elf32_file_header.h  elf32_reader.cpp  elf32_reader.h  elf64.h  elf64_file_header.cpp  elf64_file_header.h  elf64_reader.cpp  elf64_reader.h  elf_common.cpp  elf_common.h  elf_reader.cpp  elf_reader.h  file_data.cpp  file_data.h  file_header.h  logger.cpp  logger.h  main.cpp  type_detector.cpp  type_detector.h
test/: CMakeLists.txt  binary_buffer_reader_test.cpp  binary_file_reader_test.cpp  binary_reader_test.cpp  elf32_file_header_test.cpp  elf32_reader_test.cpp  elf64_file_header_test.cpp  elf64_reader_test.cpp  elf_reader_test.cpp  expected_performance.json  file_data_test.cpp  logger_test.cpp  test_utils.cpp  test_utils.h  type_detector_test.cpp
test/data/: elf_with_big_endianness  elf_with_wrong_bitness  elf_with_wrong_endianness  simple.wasm  simple_elf32  simple_elf64
test/generators/: generate_elf_with_big_endianness.cpp  generate_elf_with_wrong_bitness.cpp  generate_elf_with_wrong_endianness.cpp  generate_elf_without_bitness.cpp  generate_one_byte_file.cpp  generate_unknown_binary.cpp  simple_elf.cpp
tools/: bench  bench-win32.bat  bench-win64.bat  build-debug  build-debug-emscripten  build-emscripten  build-release  build-release-debug-info  build-release-emscripten  build-win32-debug.bat  build-win32-release.bat  build-win64-debug.bat  build-win64-release.bat  deploy  performance.py  record_size.py  size  tidy  watch
web/: script.js  shell_minimal.html
